HMAN-1100  Code review comments